# FileDrop

./: Launch-FileDrop.ps1  README.md  app.js  index.html  manifest.json  package-lock.json  package.json  server.cjs  server.js  styles.css
scripts/: build-desktop.mjs  generate-tauri-icons.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
