[package]
name = "filedrop"
version = "0.1.0"
description = "FileDrop desktop app"
authors = ["ABerger94"]
edition = "2021"

[lib]
name = "filedrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
